--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,8 @@
         "prettier"
     ],
     "rules": {
+        "jsx-a11y/anchor-is-valid" : "warn",
+        "jsx-a11y/interactive-supports-focus":"off",
         "@typescript-eslint/no-unused-vars": "off",
         "react/prop-types": "off",
         "no-console": "off",
