--- a/package.json
+++ b/package.json
@@ -54,5 +54,8 @@
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "^2.2.1"
+  },
+  "resolutions": {
+    "postcss": "8.4.21"
   }
 }
