--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "rules": {
+    "react/require-default-props": "off",
+    "jsx-a11y/control-has-associated-label": "off"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
